# mcp-container-tools

./: .gitignore  README.md  pyproject.toml
scripts/: test_mcp.py  test_server.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/prompts/: __init__.py  templates.py
src/mcp_server/resources/: __init__.py  config.py  data.py
src/mcp_server/tools/: __init__.py  azure_insights.py  calculator.py  docker.py  docker_compose.py  file_operations.py  kubernetes.py
src/mcp_server/utils/: __init__.py  log_filter.py
tests/: test_tools.py
